[project]
name = "incident-ci"
version = "0.1.0"
description = "CLI and GitHub Action for validating Incident Cards in pull requests"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "markdown-it-py>=3.0,<4.0",
    "pydantic>=2.8,<3.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
incident-ci = "incident_ci.cli:app"

[build-system]
requires = ["hatchling>=1.25,<2.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.0,<7.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = ["UP006", "UP035", "UP040", "UP045"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=src/incident_ci",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
testpaths = ["tests"]
